# stim2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fix_rpaths  start-stim-fullscreen.sh  start-stim.sh  start-stim2.sh
.github/workflows/: package_and_release.yml  publish_release.yml  release_linux.yml  release_macos.yml
assets/world/: FierceTooth.json  FierceTooth.tsx  PinkStar.json  PinkStar.tsx  RockWorld.tmx  SmallRockTiles.tsx  maze_test.tmx
config/: components.json  linux.cfg  stim2.cfg
dpkg/: control  postinst
examples/: INDEX  generate_puzzle_tiles.tcl  test_sidescroll.tcl  test_sidescroll.tmx  two_rooms.tmx  two_rooms_test.tcl
examples/animation/: INDEX  anim_basics.tcl  anim_blink.tcl  anim_compound.tcl  anim_custom.tcl  anim_kanizsa.tcl  anim_launch.tcl  anim_path.tcl
examples/basic/: INDEX  hello.tcl
examples/box2d/: INDEX  physics_world.tcl  planko.tcl  planko_catch.tcl  planko_joints.tcl  trajectory_pred.tcl
examples/image/: INDEX  image_basic.tcl  image_blend.tcl  image_blob.tcl  image_color.tcl  image_combined.tcl  image_demo.tcl  image_effects.tcl  image_gaze_sim.tcl  image_levels.tcl  image_mask.tcl  image_mask_circular.tcl  image_mask_rect.tcl  image_multi_instance.tcl  image_noise.tcl  image_opacity.tcl
examples/motionpatch/: INDEX  INDEX~  mp_aperture.tcl~  mp_coherence.tcl  mp_coherence.tcl~  mp_doubledrift.tcl  mp_noiseflow.tcl  mp_peg.tcl  mp_planko.tcl  mp_postcue.tcl  mp_pulsed.tcl  mp_pulsed_verify.py  mp_sequence.tcl  mp_shape.tcl  mp_shape.tcl~  mp_static_pulsed.tcl  mp_tiled.tcl  mp_tiled.tcl~  mp_tracking.tcl
examples/polygon/: INDEX  circle.tcl  lines.tcl  miyashita_fractal.tcl  nsided.tcl  points.tcl  rectangle.tcl  sectors.tcl  triangle.tcl
examples/priority/: INDEX  transparency.tcl  z_order.tcl
examples/shader/: INDEX  concentric_rings.tcl  concentric_rings.tcl~  shader_demo.tcl  shader_fractal_demo.tcl  shader_gratings.tcl  shader_grid_demo.tcl  shader_image_demo.tcl  shader_inline_demo.tcl
examples/spine/: INDEX  spine_aim.tcl  spine_basic.tcl  spine_grid.tcl  spine_skins.tcl
examples/stwidget/: INDEX  stwidget_input.tcl  stwidget_test.tcl
examples/svg/: INDEX  svg_animate.tcl  svg_basic.tcl  svg_dynamic.tcl
examples/text/: INDEX  text_animate.tcl  text_basic.tcl  text_icons.tcl  text_keyboard.tcl  text_multiline.tcl
examples/video/: INDEX  video_basic.tcl
examples/world/: INDEX  kenney_tiles.tcl  maze3d.tcl  rock_world.tcl
local/: README  monitor.tcl.EXAMPLE
macos/: stim2.entitlements
modules/: stwidget-1.0.tm  workspace-1.0.tm  workspace-2.0.tm
res/: stim2.icns  stim2icon.iconsproj
scripts/docker/: Dockerfile-package  Dockerfile-run  Dockerfile-stimdlls
shaders/: BasicGaborShader.glsl  BasicGaussBlobShader.glsl  checkers.glsl  concentricsine.glsl  conway.glsl  face-phong.glsl  face-phong.glsl~  face.glsl  face.glsl~  fractal.glsl  holemask.glsl  holes.glsl  ifs.glsl  image.glsl  image.glsl~  imagemix.glsl  imagemix.glsl~  julia.glsl  mandelbrot.glsl  mask.glsl  mask.glsl~  motionpatch.glsl  nebula.glsl  noise.glsl  noisyimage.glsl~  noisyimage2.glsl  noisyimage2.glsl~  noisyimage3.glsl  noisyimage3.glsl~  occludedimage.glsl  occludedimage.glsl~  polar_annulus.glsl  polar_wedge.glsl  sineshader.glsl  sineshader.glsl~  test.glsl  white_square.glsl
src/: ._imgui_console.cpp  ._stim2.cpp  ._stim2.h  ._tclproc.c  SharedQueue.h  SleepWakeHandler.h  SleepWakeHandler.mm  WebSocketServer.cpp  WebSocketServer.h  animate.cpp  animate.h  diagnostics.cpp  diagnostics.h  glad.c  grobj.c  grobj.c~  imgui_console.cpp  imgui_console.cpp~  objgroup.c  objgroup.c~  objname.c  objname.h  prmutil.c  prmutil.h  rawapi.c  rawapi.h  stim.h~  stim2.cpp  stim2.cpp.ORIG  stim2.def  stim2.def~  stim2.h  stim2.h~  tclproc.c  tclproc.c~  timer.h
src/glad/: glad.h
stimctrl/: Makefile  Makefile.arch  Makefile.cocoa  Makefile.cocoa~  Makefile.freebsd  Makefile.macos  Makefile.macos~  Makefile~  essctrl.c  pkg.tcl  pkgIndex.tcl  sockapi.c  sockapi.c~  sockapi.h~  socksend  socksend.c  stimctrl  stimctrl.c  stimctrl.c~  stimctrl.dylib  tclstimctrl.c  tclstimctrl.c~  testecho.c  testrmt  testrmt.c  testsock  testsock.c  testsock.map
stimctrl/.AppleDouble/: Makefile~  sockapi.c~  tclstimctrl.c~
stimctrl/stimctrl.dSYM/Contents/: Info.plist
stimctrl/stimctrl.dSYM/Contents/Resources/DWARF/: stimctrl
stimctrl/stimctrl.xcodeproj/: project.pbxproj  sheinb.mode1  sheinb.pbxuser
stimctrl/stimctrl.xcodeproj/.AppleDouble/: .Parent  project.pbxproj  sheinb.mode1  sheinb.pbxuser
stimdlls/: CMakeLists.txt
stimdlls/docs/: TILEMAP.md  WORLD.md
stimdlls/src/: ._Box2Dstim.cpp  ._shaderutils.c  ._spine.c  ._stb_image.h  Box2Dstim.cpp  Box2Dstim.def  Box2d.cpp  aseprite_json.cpp  aseprite_json.h  bink.c  binkgpu_gl.c  binkgpu_gl_shaders.inl  binktextures.h  binktexturesGL.cpp  box2d.c  creature.c  creature.cpp  fg.cpp  grannystim.c  image.c  lodepng.c  mesh.c  metagroup.c  metagroup.c~  motionflow.c  motionmatch.c.orig  motionpatch.c  motionpatch.c~  mpv.c  newtonstim.cpp  newtonstim.def  points.c  polygon.c  polygon.c~  polygon_orig.c  setup_audioMac.m  setup_graphicsGL.cpp  shader.c  shaderimage.c  shaderutils.c  (+22 more)
stimdlls/src/binkold/: binktextures.h  binktexturesGL.cpp~
systemd/: stim2-agent.service  stim2-x11.service  stim2.service
www/: console.html  stim2-dev.html
www/css/: TclTerminal.css
www/js/: TclLinter.js  TclTerminal.js
